[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["NicholasMuch1 <126075762+NicholasMuch1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.26.0"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
